Fixed openapi spec (#13)
* Typed Linting Results as own Schema

* Regenerated openapi spec

* Updated Rules

* Removed Example form createdLintingDTO linting results so its automatically generated

* Updated Snapshot e2e test

* Fixed Vaulnerabilities with medium severity
