# openapi/openapi.json
@@ -138,6 +138,127 @@
                     "apiSpecAsBase64"
                 ]
             },
+            "SpectralResultPosition": {
+                "type": "object",
+                "properties": {
+                    "line": {
+                        "type": "number",
+                        "description": "Line position in a document (zero-based)"
+                    },
+                    "character": {
+                        "type": "number",
+                        "description": "Character offset on a line in a document (zero-based). Assuming that the line is represented as a string, the `character` value represents the gap between the `character` and `character + 1`. If the character value is greater than the line length it defaults back to the line length."
+                    }
+                },
+                "required": [
+                    "line",
+                    "character"
+                ]
+            },
+            "SpectralResultRange": {
+                "type": "object",
+                "properties": {
+                    "start": {
+                        "description": "The starting position of the issue inside the linted document",
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/SpectralResultPosition"
+                            }
+                        ]
+                    },
+                    "end": {
+                        "description": "The ending position of the issue inside the linted document",
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/SpectralResultPosition"
+                            }
+                        ]
+                    }
+                },
+                "required": [
+                    "start",
+                    "end"
+                ]
+            },
+            "SpectralResult": {
+                "type": "object",
+                "properties": {
+                    "path": {
+                        "description": "The path of the error as JsonPath",
+                        "example": [
+                            "paths",
+                            "/route",
+                            "get"
+                        ],
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    },
+                    "code": {
+                        "description": "The code of the rule, can be used to identify the rule that caused the issue",
+                        "example": "path-description-is-mandatory",
+                        "oneOf": [
+                            {
+                                "type": "string"
+                            },
+                            {
+                                "type": "number"
+                            }
+                        ]
+                    },
+                    "range": {
+                        "description": "The range of the error inside the linted document",
+                        "example": {
+                            "start": {
+                                "line": 14,
+                                "character": 21
+                            },
+                            "end": {
+                                "line": 84,
+                                "character": 52
+                            }
+                        },
+                        "allOf": [
+                            {
+                                "$ref": "#/components/schemas/SpectralResultRange"
+                            }
+                        ]
+                    },
+                    "message": {
+                        "type": "string",
+                        "description": "The message associated with the issue",
+                        "example": "Every route of an API should have a description; property: /route.description is missing"
+                    },
+                    "severity": {
+                        "type": "number",
+                        "description": "The severity of the issue. 0 = \"Error\", 1 = \"Warning\", 2 = \"Information\", 3 = \"Hint\"",
+                        "enum": [
+                            0,
+                            1,
+                            2,
+                            3
+                        ]
+                    },
+                    "source": {
+                        "type": "string",
+                        "description": "A human-readable string describing the source of this diagnostic, e.g. \"typescript\" or \"super lint\"."
+                    },
+                    "tags": {
+                        "description": "Additional metadata about the diagnostic.",
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
+                    }
+                },
+                "required": [
+                    "path",
+                    "code",
+                    "range",
+                    "severity"
+                ]
+            },
             "CreatedLintingDto": {
                 "type": "object",
                 "properties": {
@@ -169,10 +290,9 @@
                     },
                     "lintingResults": {
                         "description": "Example API linting result",
-                        "example": [],
                         "type": "array",
                         "items": {
-                            "type": "array"
+                            "$ref": "#/components/schemas/SpectralResult"
                         }
                     }
                 },
